add D1S_plot files

--- a/D1f/D1f_plot.ipynb
+++ b/D1f/D1f_plot.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e416b86d",
    "metadata": {},
    "outputs": [
@@ -142,10 +142,10 @@
     "ax1.plot(df2[\"points\"], Am_low_df2, linestyle=\"--\", color=\"#2ca02c\")\n",
     "ax1.plot(df2[\"points\"], A15_up_df2,  linestyle=\"--\", color=\"#ff7f0e\", label=r\"$\\bar{X}^{1.5}$\")\n",
     "ax1.plot(df2[\"points\"], A15_low_df2, linestyle=\"--\", color=\"#ff7f0e\")\n",
-    "ax1.plot(df2[\"points\"], Axb_up_df2,  linestyle=\"--\", color=\"#9467bd\", label=r\"$\\Delta\\lim$\")\n",
+    "ax1.plot(df2[\"points\"], Axb_up_df2,  linestyle=\"--\", color=\"#9467bd\", label=r\"$\\bar{X}^{b}$\")\n",
     "ax1.plot(df2[\"points\"], Axb_low_df2, linestyle=\"--\", color=\"#9467bd\")\n",
     "\n",
-    "ax1.set_title(r'CI of $\\bar{X}^{0.5}, \\bar{X}^{1.0}, \\bar{X}^{1.5}$ and $\\Delta\\lim$')\n",
+    "ax1.set_title(r'CI of $\\bar{X}^{0.5}, \\bar{X}^{1.0}, \\bar{X}^{1.5}$ and $\\bar{X}^{b}$')\n",
     "ax1.set_xlabel(\"Partition points\")\n",
     "ax1.set_ylabel(\"$E$\")\n",
     "ax1.grid(True, linestyle=\"--\", alpha=0.4)\n",
@@ -155,12 +155,12 @@
     "ax2 = axes[1]\n",
     "ax2.plot(df2[\"points\"], A15_up_df2,  linestyle=\"--\", color=\"#ff7f0e\", label=r\"$\\bar{X}^{1.5}$\")\n",
     "ax2.plot(df2[\"points\"], A15_low_df2, linestyle=\"--\", color=\"#ff7f0e\")\n",
-    "ax2.plot(df2[\"points\"], Axb_up_df2,  linestyle=\"--\", color=\"#9467bd\", label=r\"$\\Delta\\lim$\")\n",
+    "ax2.plot(df2[\"points\"], Axb_up_df2,  linestyle=\"--\", color=\"#9467bd\", label=r\"$\\bar{X}^{b}$\")\n",
     "ax2.plot(df2[\"points\"], Axb_low_df2, linestyle=\"--\", color=\"#9467bd\")\n",
     "ax2.plot(df2[\"points\"], Am_up_df2,  linestyle=\"--\", color=\"#2ca02c\", label=r\"$\\bar{X}^{1.0}$\")\n",
     "ax2.plot(df2[\"points\"], Am_low_df2, linestyle=\"--\", color=\"#2ca02c\")\n",
     "\n",
-    "ax2.set_title(r'CI of $\\bar{X}^{1.5},\\bar{X}^{1.0}$ and $\\Delta\\lim$')\n",
+    "ax2.set_title(r'CI of $\\bar{X}^{1.5},\\bar{X}^{1.0}$ and $\\bar{X}^{b}$')\n",
     "ax2.set_xlabel(\"Partition points\")\n",
     "ax2.set_ylabel(\"$E$\")\n",
     "ax2.grid(True, linestyle=\"--\", alpha=0.4)\n",
