fixed some mistakes and bugs about lim of D1S

--- a/LT/LT_plot.ipynb
+++ b/LT/LT_plot.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "234044b7",
    "metadata": {},
    "outputs": [
@@ -298,12 +298,12 @@
     "# Axb_low_df2  = df2['Ab'] - z * Axb_se_df2\n",
     "\n",
     "#log変換\n",
-    "A_up_df_log = np.log(abs(A_up_df2))\n",
-    "A_low_df_log = np.log(abs(A_low_df2))\n",
-    "Am_up_df_log = np.log(abs(Am_up_df2))\n",
-    "Am_low_df_log = np.log(abs(Am_low_df2))\n",
-    "A15_up_df_log = np.log(abs(A15_up_df2))\n",
-    "A15_low_df_log = np.log(abs(A15_low_df2))\n",
+    "A_up_df_log = np.log10(abs(A_up_df2))\n",
+    "A_low_df_log = np.log10(abs(A_low_df2))\n",
+    "Am_up_df_log = np.log10(abs(Am_up_df2))\n",
+    "Am_low_df_log = np.log10(abs(Am_low_df2))\n",
+    "A15_up_df_log = np.log10(abs(A15_up_df2))\n",
+    "A15_low_df_log = np.log10(abs(A15_low_df2))\n",
     "\n",
     "# グラフを描画\n",
     "plt.figure(figsize=(8, 5), dpi=150)  # dpi とは Dots Per Inch を意味する\n",
