upload D2f and D2S files

--- a/D1f/D1f_plot.ipynb
+++ b/D1f/D1f_plot.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5c19043f",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
     "#信頼水準(confidence level)の関数\n",
     "def conf_level(a): #aは信頼度であり、ex:a=0.95なら95%信頼区間\n",
     "    alpha = 1-a #aが0.95なら、alpha=0.05となり（全体の5%が信頼区間外になる）,外側（両端）にある確率の合計である\n",
-    "    z=norm.ppf(1 - alpha / 2) #ここでPPF = Percent Point Function,両側検定なのでalpha/2,norm.ppfは累積分布関数の逆関数、i.e.「何番目の値がこの累積確率になるのか？」を計算する\n",
+    "    z=norm.ppf(1 - alpha / 2) #ここでPPF = Percaent Point Function,両側検定なのでalpha/2,norm.ppfは累積分布関数の逆関数、i.e.「何番目の値がこの累積確率になるのか？」を計算する\n",
     "    return z\n",
     "\n",
     "df2 = pd.read_csv(\"../data_source/D1fM1_all_100_1000_data.csv\")\n",
