add some describes of readme file ver3.2

--- a/Calculation/higher_order_hermite_calculation.tex
+++ b/Calculation/higher_order_hermite_calculation.tex
@@ -157,7 +157,7 @@ H^{12}_t(x,y) = \frac{1}{t^2} u_1 u_2 - \frac{1}{t} (b^{-1})_{12}.
 Since $(b^{-1})_{12} = 0$:
 \[
 \boxed{
-H^{12}_t(x,y) = \frac{r_1 r_2}{t^2 s(x_2)^2 s(x_1)^2} \frac{\bigl(y_1-x_1-a_1(x)t\bigr)\bigl(y_2-x_2-a_2(x)t\bigr)}{t^2\,s(x_2)^2\,s(x_1)^2}
+H^{12}_t(x,y) = \frac{r_1 r_2}{t^2 s(x_2)^2 s(x_1)^2} = \frac{\bigl(y_1-x_1-a_1(x)t\bigr)\bigl(y_2-x_2-a_2(x)t\bigr)}{t^2\,s(x_2)^2\,s(x_1)^2}
 }
 \]
 
@@ -218,8 +218,7 @@ H^{1112}_t = \frac{u_2}{t} \left( \frac{u_1^3}{t^3} - \frac{3 (b^{-1})_{11} u_1}
 Substituting variables:
 \begin{align*}
 H^{1112}_t(x,y) &= \frac{r_1^3 r_2}{t^4 s(x_2)^6 s(x_1)^2} - \frac{3 r_1 r_2}{t^3 s(x_2)^4 s(x_1)^2}\\
-                &= \boxed{_t^{1112}(x,y)
-= \frac{\bigl(y_1-x_1-a_1(x)t\bigr)^3\bigl(y_2-x_2-a_2(x)t\bigr)}{t^4\,s(x_2)^6\,s(x_1)^2}
+                &= \boxed{\frac{\bigl(y_1-x_1-a_1(x)t\bigr)^3\bigl(y_2-x_2-a_2(x)t\bigr)}{t^4\,s(x_2)^6\,s(x_1)^2}
 -\frac{3\bigl(y_1-x_1-a_1(x)t\bigr)\bigl(y_2-x_2-a_2(x)t\bigr)}{t^3\,s(x_2)^4\,s(x_1)^2}}
 \end{align*}
 
