--- a/Calculation/higher_order_hermite_calculation.tex
+++ b/Calculation/higher_order_hermite_calculation.tex
@@ -165,7 +165,7 @@ H^{12}_t(x,y) = \frac{r_1 r_2}{t^2 s(x_2)^2 s(x_1)^2} = \frac{\bigl(y_1-x_1-a_1(
 
 We use the recurrence relation (The page 53, Eq. A.5 or A.7 of the \href{https://www.overleaf.com/project/6801f9a43ca0501e11926ee2}{PAPER}) to derive higher orders. For any multi-index $\alpha = (i_1, \dots, i_n)$, adding an index $j$ yields:
 \[
-H^{j,\alpha}_t(x,y) = \frac{1}{t} u_j H^{\alpha}_t(x,y) - \sum_{k=1}^n (b^{-1})_{j, i_k} H^{\alpha \setminus \{i_k\}}_t(x,y)\quad\ (k\in (1,\dots,n))
+H^{j,\alpha}_t(x,y) = \frac{1}{t} u_j H^{\alpha}_t(x,y) - \dfrac{1}{t}\sum_{k=1}^n (b^{-1})_{j, i_k} H^{\alpha \setminus \{i_k\}}_t(x,y)\quad\ (k\in (1,\dots,n))
 \]
 Since $b$ is diagonal, the sum only survives when $i_k = j$.
 
@@ -177,7 +177,7 @@ H^{111}_t = \frac{u_1^3}{t^3} - \frac{3 (b^{-1})_{11} u_1}{t^2}.
 \]
 Applying the recurrence for $H^{1111}_t$ (adding index 1 to $H^{111}_t$):
 \[
-H^{1111}_t = \frac{u_1}{t} H^{111}_t - \frac{3 (b^{-1})_{11}}{t} H^{11}_t.
+H^{1111}_t = \frac{u_1}{t} H^{111}_t - \frac{3 (b^{-1})_{11}}{t} H^{11}_t
 \]
 Substituting the expressions:
 \begin{align*}
@@ -209,7 +209,7 @@ H^{2222}_t(x,y) &= \frac{r_2^4}{t^4 s(x_1)^8} - \frac{6 r_2^2}{t^3 s(x_1)^6} + \
 \subsubsection{Calculation of $H^{1112}_t$}
 We add index 2 to $H^{111}_t$. Since $(b^{-1})_{21}=0$, the correction terms in the recurrence vanish:
 \[
-H^{1112}_t = \frac{u_2}{t} H^{111}_t - \sum_{k=1}^3 (b^{-1})_{21} H_t^{11} = \frac{u_2}{t} H^{111}_t.
+H^{1112}_t = \frac{u_2}{t} H^{111}_t - \dfrac{1}{t}\sum_{k=1}^3 (b^{-1})_{21} H_t^{11} = \frac{u_2}{t} H^{111}_t
 \]
 Using $H^{111}_t = \frac{u_1^3}{t^3} - \frac{3 (b^{-1})_{11} u_1}{t^2}$:
 \[
@@ -230,6 +230,8 @@ H^{1222}_t(x,y) &= \frac{r_2^3 r_1}{t^4 s(x_1)^6 s(x_2)^2} - \frac{3 r_2 r_1}{t^
 -\frac{3\bigl(y_1-x_1-a_1(x)t\bigr)\bigl(y_2-x_2-a_2(x)t\bigr)}{t^3\,s(x_2)^2\,s(x_1)^4}}
 \end{align*}
 
+
+
 \subsubsection{Calculation of $H^{1122}_t$}
 We add index 2 to $H^{112}_t$. Recall (from previous derivation) that:
 \[
@@ -237,7 +239,7 @@ H^{112}_t = \frac{u_1^2 u_2}{t^3} - \frac{(b^{-1})_{11} u_2}{t^2}.
 \]
 Using the recurrence to add index 2:
 \begin{align*}
-H^{1122}_t &= \frac{u_2}{t} H^{112}_t - \left((b^{-1})_{21} H^{12}_t + (b^{-1})_{21} H^{12}_t +(b^{-1})_{22} H^{11}_t\right)\\
+H^{1122}_t &= \frac{u_2}{t} H^{112}_t - \dfrac{1}{t}\left((b^{-1})_{21} H^{12}_t + (b^{-1})_{21} H^{12}_t +(b^{-1})_{22} H^{11}_t\right)\\
           &= \frac{u_2}{t} H^{112}_t - \frac{(b^{-1})_{22}}{t} H^{11}_t.
 \end{align*}
 Where,$(b^{-1})_{21} = 0$\\
