LTM1 modelの直しと2DD2SM3の作り

--- a/Calculation/higher_order_hermite_calculation.tex
+++ b/Calculation/higher_order_hermite_calculation.tex
@@ -26,6 +26,7 @@ We denote the components of the inverse matrix as $(b^{-1})_{ij}$. Thus:
 \[
 (b^{-1})_{11} = \frac{1}{s(x_2)^2}, \quad (b^{-1})_{22} = \frac{1}{s(x_1)^2}, \quad (b^{-1})_{12} = (b^{-1})_{21} = 0
 \]
+Where,\ $s(x) = 2 + \sin(x)$
 
 \subsection{Centralized Variables}
 Let $r$ be the centered spatial increment (accounting for drift $a(x)$):
